fix new account dialog not scrollable on mobile, fix #909

--- a/css/mail.css
+++ b/css/mail.css
@@ -213,12 +213,6 @@
 
 /* app content*/
 
-/* override the app content scrolling behavior
-	because we use 2 custom scrollable areas */
-#app-content {
-	overflow: hidden;
-}
-
 #mail_messages {
 	width: 30%;
 	height: 100%;
